# TANIT

./: Module Capteur RaspPi.docx
PiCV/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  camcvServer.cpp  camcvVoid.cpp  client.c  client.h  reco.cpp  reco2.cpp  reco3.cpp  reco3.hpp
PiCV/camcvV1/: camcvtest.cpp  reco.hpp  reco3.cpp
PiCV/camcvV1/interface/: .cproject
camcvV1/: LogoEnstaV1.xml  README.md  reco3.hpp
camcvV2/: Makefile  README.md  camcv.cpp  camcvsrc.cpp  camcvtest.cpp  cascade.xml  cmake_install.cmake  reco2.hpp  recoServer.cpp  recoServer.hpp
