cmake_minimum_required(VERSION 2.8)
 project( camcv )
 SET(COMPILE_DEFINITIONS -Werror)
 find_package( OpenCV REQUIRED )
 include_directories(/opt/vc/include)
 include_directories(/opt/vc/include/interface/vcos)
 include_directories(/opt/vc/include/interface/vcos/pthreads)
 include_directories(/opt/vc/include/interface/vmcs_host/linux)
 include_directories(.)
 add_executable(camcv RaspiCamControl.c RaspiCLI.c RaspiPreview.c reco3.cpp camcvtest.cpp)
 target_link_libraries(camcv /opt/vc/lib/libmmal_core.so /opt/vc/lib/libmmal_util.so /opt/vc/lib/libmmal_vc_client.so /opt/vc/lib/libvcos.so /opt/vc/lib/libbcm_host.so ${OpenCV_LIBS})
